# Jetpad

./: .gitignore  LandDefense.h  README.md
.github/workflows/: c-cpp.yml  main.yml  main3.yml
System/: Action.cpp  Action.h  AirAttack.cpp  AirAttack.h  AirDefense.cpp  AirDefense.h  Air_Attack.cpp  Air_Attack.h  Air_Defense.cpp  Air_Defense.h  Army.h  ArmyFactory.h  AttackPhase.cpp  AttackPhase.h  Attacking.cpp  Attacking.h  Bank.cpp  Bank.h  BuildPhase.cpp  BuildPhase.h  Builder.h  ChoosePlayerPhase.cpp  ChoosePlayerPhase.h  Context.h  Country.cpp  Country.h  CountryBuilder.cpp  CountryBuilder.h  CountryStorage.cpp  CountryStorage.h  DefendPhase.cpp  DefendPhase.h  Defending.cpp  Defending.h  Director.h  EndOfWar.cpp  EndOfWar.h  Engine.cpp  Engine.h  LandAttack.cpp  (+49 more)
System/Edwin_Code/: Action.cpp  Army.h  ArmyPrototype.cpp  ArmyPrototype.h  AttackPhase.h  Bank.cpp  Bank.h  Country.h  CountryObserver.h  CountrySpy.h  DefendPhase.h  Engine.cpp  Engine.h  Soldier.cpp  Soldier.h  TransportObserver.h  TransportSpy.cpp  TransportSpy.h  Vehicle.cpp  Vehicle.h  main.cpp  (+1 more)
System/Edwin_Code (INTEGRATED)/: Army.cpp  Army.h  ArmyFactory.cpp  ArmyPrototype.cpp  AttackPhase.h  Attacking.cpp  Bank.cpp  BuildPhase.cpp  Country.cpp  CountryBuilder.cpp  CountryBuilder.h  CountryObserver.cpp  CountrySpy.cpp  Director.cpp  Director.h  Soldier.h  SoldierFactory.cpp  StartOfWar.cpp  State.cpp  TransportObserver.cpp  TransportSpy.cpp  TransportSpy.h  Vehicle.cpp  VehicleFactory.cpp  WarUtilitiesFactory.h  makefile
UnitTesting/gtest-demo/src/: CMakeLists.txt  unitTest.cpp  unitTest.h
(+102 files in other folders)
